# DESY-testbeam

./: ._README.md  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  setup.fish  setup.sh
FileLists/: ERAM  angle  desy19_onlyneeded.list  desy21_BfieldScan_YAll.list  desy21_Bfield_EcrossB.list  desy21_Bfield_EcrossB_dop.list  desy21_Bfield_Zdd.list  desy21_Bfield_Zdd_additional.list  desy21_ThetaScan.list  desy21_bias_PRF_column.list  desy21_dE_SR_highStat.list  desy21_dE_SR_list.list  desy21_dE_SR_list_lost.list  desy21_dE_SR_phi.list  desy21_dE_SR_veryhighStat.list  desy21_gainScan.list  desy21_momScan.list  desy21_onlyneeded.list  desy21_pTimeScan.list  desy21_test.list  gain.list  gain_200.list  gain_412.list  highstat  mom_200.list  mom_412.list  peacking_430  peacking_530  phi_200.list  phi_412.list  sim_sergey.list  sim_sergey_new.list  sim_sergey_v10.list  z_360_275_200_02T.list  z_360_275_200_0T.list  z_360_275_412_02T.list  z_360_275_412_0T.list
FileLists/2019/: ._phi_200_n.list  ._phi_412_n.list  ._z_200_02T.list  ._z_360_275_200_02T.list  ._z_412_02T.list  all_02T  all_0T  cosmic  final  gain_200.list  gain_412.list  highstat  mom_200.list  mom_412.list  peacking_430  peacking_530  phi_200.list  phi_200_n.list  phi_412.list  phi_412_n.list  z_200_02T.list  z_360_275_200_02T.list  z_360_275_200_0T.list  z_360_275_412_02T.list  z_360_275_412_0T.list  z_412_02T.list
FileLists/2021/: coarse  phi_200  phi_412  yscan  z_scan  z_scan_200  z_scan_412
FileLists/CERN22/: ._commissioning.list  ._commissioning_allFiles_p1.list  ._commissioning_allFiles_p2.list  ._commissioning_allFiles_p3.list  ._commissioning_oneFile.list  ._commissioning_oneFile_lost.list  commissioning.list  commissioning_allFiles_p1.list  commissioning_allFiles_p2.list  commissioning_allFiles_p3.list  commissioning_oneFile.list  commissioning_oneFile_all.list  commissioning_oneFile_lost.list  commissioning_oneFile_only_needed.list
Google_tests/: CMakeLists.txt  FakeMaker.cpp  FakeMaker.h  analysis.cpp  fitters.cpp  test1.cpp  test2.cpp  utils.cpp
app/: SpatialResolutionApp.cxx
macros/: HitMap.cxx  Makefile  PadScan.cxx  TutorialMacro.cxx  prf.C
params/: ._horiz_CERN22.ini  2by1.ini  2by1_inv.ini  3by1.ini  3by1_inv.ini  default.ini  diag.ini  diag_bias_corr.ini  diag_inv.ini  horiz.ini  horiz_CERN22.ini  horiz_bias_corr.ini  invert.ini  vert.ini  vert_bias_corr.ini
params/CERN22/: ._horiz_CERN22.ini
plotter/: Charge_scipt.ipynb  CrossTalk.ipynb  EventDisplay.C  Iteration.ipynb  PRF_fit.ipynb  README.md  SR_master.C  Spatial.C  SpatialIteration.C  SpatialScan.C  Time.ipynb  Track_params.ipynb  WF.ipynb  angle.ipynb  charge.ipynb  dedx.C  x_scan.ipynb
script/: ._submitter_old.py  RunIter.py  RunSR.py  clean_log.sh  runAll.sh  script_submitter_lyon.py  submitter.py  submitter_cern.py  submitter_lyon.py  submitter_old.py  submitter_sim.py
script/temp/: 0.sh  Submit.sub  all.sh
script/temp_07/: 0.sh  1.sh  10.sh  101.list  11.sh  12.sh  13.sh  14.sh  15.sh  16.sh  17.sh  173.list  18.sh  19.sh  2.sh  20.sh  21.sh  22.sh  23.sh  3.sh  395.list  396.list  4.sh  440.list  5.sh  531.list  6.sh  601.list  7.sh  782.list  8.sh  9.sh  902.list  967.list  all.sh.bu  uyevarou.cc
script/temp_08/: 0.sh  1.sh  10.sh  11.sh  12.sh  121.list  13.sh  14.sh  149.list  15.sh  16.sh  17.sh  170.list  18.sh  19.sh  197.list  2.sh  20.sh  21.sh  22.sh  23.sh  24.sh  25.list  25.sh  255.list  26.sh  265.list  27.sh  28.sh  29.sh  290.list  3.sh  30.sh  31.sh  32.sh  323.list  33.sh  34.sh  35.sh  36.sh  (+35 more)
script/temp_09/: 0.sh  1.sh  10.sh  11.sh  12.sh  13.sh  136.list  158.list  2.sh  228.list  249.list  3.sh  4.sh  435.list  5.sh  554.list  562.list  6.sh  683.list  7.sh  788.list  8.sh  9.sh  927.list  933.list  955.list  977.list  all.sh.bu  uyevarou.cc
src/: CMakeLists.txt  Makefile
src/Reconstruction/: CrossingReconstruction.cxx  CrossingReconstruction.hxx  DBSCANReconstruction.cxx  DBSCANReconstruction.hxx  PadSelection.cxx  PadSelection.hxx  README.md  Selection.cxx  Selection.hxx  TrackSelection.cxx  TrackSelection.hxx  line.hxx
src/Selection/: CrossingSelection.cxx  CrossingSelection.hxx  DBSCANSelection.cxx  DBSCANSelection.hxx
src/SpatialResol/: ._SpatialResolAna.cxx  ._SpatialResolAna.hxx  InclinedTracks.cxx  InclinedTracks.hxx  README.md  RunInc.cxx  RunSR.cxx  SpatialResolAna.cxx  SpatialResolAna.hxx  runner.sh
src/base/: ._AnalysisBase.cxx  AnalysisBase.cxx  AnalysisBase.hxx  CMakeLists.txt  DataStorage.cxx  DataStorage.hxx  Interface.cxx  Interface.hxx  README.md  ReconstructionBase.cxx  ReconstructionBase.hxx  SelectionBase.cxx  SelectionBase.hxx  TCluster.cxx  TCluster.hxx  TEvent.cxx  TEvent.hxx  TrackFitter.cxx  TrackFitter.hxx
src/base/DataStorage/: CMakeLists.txt  TCluster.cxx  TCluster.hxx  TEvent.cxx  TEvent.hxx  THit.cxx  THit.hxx  TRawEvent.cxx  TRawEvent.hxx  TTrack.cxx  TTrack.hxx  linkDef.h
src/dEdx/: dEdxAna.cxx  dEdxAna.hxx
src/utils/: ._ClDump.cxx  ._ClDump.hxx  ._Geom.cxx  ._Geom.hxx  ._SetT2KStyle.hxx  ClDump.cxx  ClDump.hxx  Geom.cxx  Geom.hxx  SetT2KStyle.hxx
test/: Makefile  SR_test.cxx  dEdx_test.cxx  test.sh
utils/: Geom.hxx  SetT2KStyle.hxx
